# Libev-Socket-server-client-communication

./: CMakeLists.txt  README.md  socket_client.cpp  socket_server.cpp  solver.h
